      _local_remote_pairs=[tuples].  This complements a complex
      primaryjoin condition allowing you to provide the
      individual column pairs which comprise the relation's
      local and remote sides.  Also improved lazy load SQL
      generation to handle placing bind params inside of
      functions and other expressions.  (partial progress
      towards [ticket:610])
    
    - Fixed "concatenate tuple" bug which could occur with
      Query.order_by() if clause adaption had taken place.
      [ticket:1027]
      
    - Removed ancient assertion that mapped selectables require
      "alias names" - the mapper creates its own alias now if
      none is present.  Though in this case you need to use the
      class, not the mapped selectable, as the source of column
      attributes - so a warning is still issued.

    - fixes to the "exists" function involving inheritance (any(), has(),
      ~contains()); the full target join will be rendered into the
      EXISTS clause for relations that link to subclasses.
      
    - restored usage of append_result() extension method for primary 
      query rows, when the extension is present and only a single-
      entity result is being returned.
    
    - Also re-established viewonly relation() configurations that
      join across multiple tables.
      
    - removed ancient assertion that mapped selectables require
      "alias names" - the mapper creates its own alias now if
      none is present.  Though in this case you need to use 
      the class, not the mapped selectable, as the source of
      column attributes - so a warning is still issued.
      
    - refined mapper._save_obj() which was unnecessarily calling
      __ne__() on scalar values during flush [ticket:1015]
      
    - added a feature to eager loading whereby subqueries set
      as column_property() with explicit label names (which is not
      necessary, btw) will have the label anonymized when